[metadata]
root_url = https://github.com/i2mint/
license = mit
author = OtoSense
description = Python continuous integration (CI) support tools.
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = isee
display_name = isee

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

