[metadata]
name = isee
version = 0.2.2
url = https://github.com/i2mint/isee
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = mit
author = OtoSense
description = Python continuous integration (CI) support tools.
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
display_name = isee

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	semver==2.13.0
	epythet

[options.entry_points]
console_scripts =
	isee = isee:main
	mk_pylint_report = isee:print_report_followed_by_log
